--- a/src/code/index.html
+++ b/src/code/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Kerblif's pain</title>
     <style>
         @font-face {
@@ -72,7 +73,7 @@
 </button>
 
 <div id="coords">HSE forever!!</div>
-<div id="docs"><a href="/src/bin/docs/ТиповаяЗастройка.pdf">Скачать текст о типокой застройке</a></div>
+<div id="docs"><a href="https://disk.yandex.ru/i/NMhYKFVdQiSDXQ">Скачать текст о типокой застройке</a></div>
 
 <body style="margin: 0">
 
